# XDC3_RUST

./: .env  Cargo.toml  README.md
src/: lib.rs  main.rs
src/xrc20/: allowance.rs  approve.rs  balanceof.rs  decimals.rs  decrease_allowance.rs  increase_allowance.rs  mod.rs  name.rs  symbol.rs  total_supply.rs  transfer_from.rs  transfer_token.rs  transfer_xdc.rs  xdc_account.rs
src/xrc721/: approve.rs  balanceof.rs  getapprove.rs  isapprove.rs  mod.rs  name.rs  ownerof.rs  safe_transferfrom.rs  setapprove.rs  support_interface.rs  symbol.rs  token_by_index.rs  token_uri.rs  tokenof_owner_byindex.rs  total_supply.rs  transfer_from.rs
